--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="th">
     <head>
-        <title>ช่องทางติดต่อ</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>ติดต่อ</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>Phone</h1>
-        <h1>0123456789</h1>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="active">หน้าแรก</a></li>
+                    <li><a href="about.html">เกี่ยวกับ</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>ช่องทางการติดต่อ</h1>
+            <tr>
+                <p>FACEBOOK : มะ งง
+                <p>LINE ID : thamma2548</p>
+                <p>เบอร์โทรศัพท์ : 0645298919</p>
+            </tr>
+        </main>
+        <footer>
+            <p>&copy; 2024 My First Website</p>
+        </footer>
     </body>
 </html>
