--- a/about.html
+++ b/about.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html lang="th">
     <head>
-        <title>เกี่ยวกับฉัน</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>หน้าแรก - เว็บไซต์ของฉัน</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <h1>ชื่อมะ</h1>
-        <h1>เป็นคนchillๆ</h1>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html" class="active">หน้าแรก</a></li>
+                    <li><a href="about.html">เกี่ยวกับ</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>เกี่ยวกับตัวฉัน</h1>
+            <p>ชื่อ-นามสกุล : นายพลวัฒน์ ปรุงปัญญา</p>
+        </main>
+        <footer>
+            <p>&copy; 2024 My First Website</p>
+        </footer>
     </body>
 </html>
